# quick_sort

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.txt  main.cpp
my_class/: README.md  my_class.cmake  my_class.cpp  my_class.h
scripts/: build.sh  class.sh  docker_build.sh  docker_setup.sh  docker_test.sh  install_dep.sh  test.sh
src/: CMakeLists.txt  multithread_partitioner.h  multithread_qsort.h  my_sort.h  pch.h  simple_sort.h  sorter_interface.h  standart_qsort.h  thread_pool.h  thread_safe_queue.h  timer.cpp  timer.h
src/move/: README.md  move.cmake  move.cpp  move.h
tests/: CMakeLists.txt
tests/move_test/: move_test.cmake  move_test.cpp  move_test.h
tests/my_class/: my_class_test.cmake  my_class_test.cpp  my_class_test.h  simple_sort.h  sorter.h
tests/sort/: sort_test.cmake  sort_test.cpp
